--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,17 @@
 /*
     reset
 */
+
 html {
     font-family: sans-serif;
     color: #444;
+}
+
+body {
+    max-width: 1024px;
+    margin: 0 auto;
+    padding-bottom: 40px;
+    padding: 0 15px;
 }
 
 figure {
@@ -12,6 +20,7 @@ figure {
 
 /* My Styles */
 /* HEADER */
+
 header {
     display: flex;
     flex-flow: column;
@@ -32,7 +41,7 @@ a {
 }
 
 .info-header h1 {
-    font-size: 37px;
+    font-size: 35px;
     margin-bottom: 0;
     margin-top: 20px;
 }
@@ -44,6 +53,7 @@ a {
 }
 
 /* MAIN CONTENT */
+
 .main-image {
     width: 100%;
 }
@@ -52,7 +62,7 @@ a {
     width: 100%;
 }
 
-.figure-wrapper{
+.figure-wrapper {
     position: relative;
 }
 
@@ -64,22 +74,124 @@ a {
     text-shadow: 3px 3px 3px #333;
 }
 
+.soundcloud-vp {
+    width: 100%;
+    height: 300px;
+}
 
+/* FOOTER */
+footer {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0 10px 20px 10px; 
+    margin-top: 40px;
+    background-color: #2f2f2f;
+    color: white;
+    box-shadow: 3px -6px 2px 2px;
+    font-size: 30px;
+}
+
+footer section {
+    display: flex;
+    justify-content: space-between;
+}
+
+footer section a {
+    margin-right: 30px;
+}
 
 /* MEDIA QUERY FOR TABLET */
-@media screen and (min-width: 768px) {
 
-}
-/* MEDIA QUERY FOR DESKTOP */
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 500px) {
+    header {
+        margin-top: 20px;
+        flex-flow: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .info-header h1 {
+        margin: 0;
+    }
     /* MAIN */
     .main-image {
         filter: blur(2px);
         transform: all .3s ease-in-out;
-        transition: all .1s ease-in-out;
+        transition: all .6s ease-in-out;
     }
-
     .main-image:hover {
         filter: blur(0px)
+    }
+
+    /* WIDTH SETTINGS */
+    .full-row {
+        width: 100%;
+    }
+
+    .half-row {
+        width: 50%;
+    
+    }
+    /* BOX SHADOW SETTINGS */
+    .shadow {
+        box-shadow: 0 3px 4px 0px;
+    }
+
+    .shadow-float {
+        box-shadow: -15px 15px 9px -1px rgba(50, 50 , 50, 0.6);
+    }
+
+    .featured-work {
+        display: flex;
+        flex-flow: row;
+        flex-wrap: wrap;
+    }
+
+    .soundcloud-vp {
+        width: 100%;
+        min-height: 100%;
+    }
+
+    .float-music-player {
+        width: 100%;
+        margin-bottom: 40px;
+    }
+
+    .soundcloud-vp {
+        width: 100%;
+    }
+}
+
+/* MEDIA QUERY FOR DESKTOP */
+
+@media screen and (min-width: 1024px) {
+    .float-music-player {
+        position: fixed;
+        z-index: 99;
+        right: 13px;
+        bottom: 13px;
+        width: 150px;
+        height: 150px;
+        margin: 0;
+    }
+
+    .soundcloud-vp {
+        width: 150px;
+        height: 150px;
+    }
+
+    .float-music-player h3 {
+        display: none;
+    }
+
+    .shadow-float {
+        box-shadow: -15px 15px 9px -1px rgba(50, 50 , 50, 0.6);
+    }
+
+    footer {
+        flex-flow: row;
+        justify-content: space-around;
+        align-items: center;
     }
 }
